manifests/kargo/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kargo
  annotations:
    argocd.argoproj.io/sync-wave: "-10"
